--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -245,54 +245,78 @@ button.btn-language:hover {
 
 .work-img {
   height: 450px;
-  width: 390px;
+  width: 377px;
 }
 
 .recent-work-img {
-  width: 390px;
+  width: 375px;
   height: 335px;
 }
 
 .over {
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  text-align: center;
-  border: 0;
+background-color: black;
+display: block;
+width: 351px;
+margin-top: 20px;
+margin-left: 27px;
+height: 310px;
+position: absolute;
+left: 0;
+top: 0;
+text-align: center;
+border: 0;
+-webkit-text-decoration: none;
+-moz-text-decoration: none;
+-ms-text-decoration: none;
+-o-text-decoration: none;
+text-decoration: none;
+-webkit-opacity: 0;
+-moz-opacity: 0;
+-ms-opacity: 0;
+-o-opacity: 0;
+opacity: 0;
+-webkit-transition: all 0.4s ease;
+-moz-transition: all 0.4s ease;
+-ms-transition: all 0.4s ease;
+-o-transition: all 0.4s ease;
+transition: all 0.4s ease;
+-webkit-transition: all 0.4s ease;
+-moz-transition: all 0.4s ease;
+-ms-transition: all 0.4s ease;
+-o-transition: all 0.4s ease;
+transition: all 0.4s ease;
+-webkit-transition: all 0.4s ease;
+-moz-transition: all 0.4s ease;
+-ms-transition: all 0.4s ease;
+-o-transition: all 0.4s ease;
+transition: all 0.4s ease;
+-webkit-transition: all 0.4s ease;
+-moz-transition: all 0.4s ease;
+-ms-transition: all 0.4s ease;
+-o-transition: all 0.4s ease;
+transition: all 0.4s ease;
 }
 
 .over:hover {
-  opacity: 0.93;
+  opacity: 0.92;
 }
 
-figcaption {
-  background: rgba(0, 0, 255, 0.92);
+.more {
+  background-color: black;
   padding: 9px 25px;
-  margin: 19px 10px 7px 10px;
   color: white;
   border: 3px solid white;
-  font-size: 19px;
+  font-size: 18px;
   position: absolute;
-  top: 50%;
-  opacity: 0;
-  height: 311px;
-  -webkit-transition: all 0.4s ease;
-  -moz-transition: all 0.4s ease;
-  -ms-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  -moz-transition: all 0.4s ease;
-  -ms-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  -moz-transition: all 0.4s ease;
-  -ms-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  transition: all 0.4s ease;
+  left: 25%;
+  top: 20px;
+  bottom: 0px;
+  -webkit-opacity: 0.92;
+  -moz-opacity: 0.92;
+  -ms-opacity: 0.92;
+  -o-opacity: 0.92;
+  opacity: 0.92;
+  margin: -20px 0 0 -88px;
   -webkit-transition: all 0.4s ease;
   -moz-transition: all 0.4s ease;
   -ms-transition: all 0.4s ease;
@@ -300,25 +324,40 @@ figcaption {
   transition: all 0.4s ease;
 }
 
-figcaption:hover {
-  opacity: 0.93;
-}
-
-figcaption a {
+.more-tall {
+  background-color: black;
+  padding: 9px 25px;
   color: white;
+  border: 3px solid white;
+  font-size: 18px;
+  width: 354px;
+  position: absolute;
+  left: 25%;
+  top: 20px;
+  bottom: -115px;
+  -webkit-opacity: 0.92;
+  -moz-opacity: 0.92;
+  -ms-opacity: 0.92;
+  -o-opacity: 0.92;
+  opacity: 0.92;
+  margin: -20px 0 0 -88px;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .btn-primary {
   color: #fff;
   background-color: black !important;
-  border-color: black !important;
+  border-color: white !important;
 }
 
 .btn-primary:hover {
   background-color: white !important;
   color: black !important;
 }
-
 
 /*CONTACT*/
 
