--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -100,6 +100,11 @@ button.btn-language:hover {
 .header .btn {
   padding: 10px 20px 10px 20px;
   border-radius: 0px;
+  transform: scale(.9, .9);
+}
+
+.header .btn:hover {
+  transform: scale(1.1, 1.1);
 }
 
 /*STUDIES*/
