--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -22,6 +22,11 @@ p, h1 {
   height:40px;
 }
 
+#logo:hover{
+  transform: rotate(5deg);
+  transition: 0.25 all ease;
+}
+
 #navbar {
   padding: 10px 25px 0 15px;
   background-color: #242424;
@@ -104,7 +109,7 @@ button.btn-language:hover {
 }
 
 .header .btn:hover {
-  transform: scale(1.1, 1.1);
+  transform: scale(1, 1);
 }
 
 /*STUDIES*/
