--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -33,6 +33,8 @@ p, h1 {
 #logo{
   width:40px;
   height:40px;
+	max-width: 40px;
+	max-height: 40px;
 }
 
 #logo:hover {
@@ -62,6 +64,11 @@ p, h1 {
 #navbar a:hover {
   color: #ffffff !important;
   background-color: #646464 !important;
+}
+
+.navbar-toggle {
+	margin-top: 0 !important;
+	margin-right: 0 !important;
 }
 
 
@@ -250,12 +257,14 @@ button.btn-language:hover {
   -ms-opacity: 0.5;
   -o-opacity: 0.5;
   opacity: 0.5;
-  padding-bottom: 25px;
+  padding-bottom: 15px;
 }
+
 
 .certifications .certifs-logo p {
   width: 220px;
   height: 20px;
+	margin-top: 15px;
 }
 
 .certifications .certifs-logo li:hover img {
@@ -695,6 +704,72 @@ button.btn-language:hover {
   text-align: center;
 }
 
+@media (max-width: 480px) {
+  .container {
+    text-align: center;
+  }
+
+	.modal-header, .modal-body{
+    margin: 0 auto;
+	}
+
+  .header h1 {
+    font-size: 13vw;
+  }
+
+	.skills img {
+		margin: 0 0 0 15px;
+    transform: translateX(15px);
+    width: 225px;
+	}
+
+  .certifications #press p {
+    text-align: center;
+  }
+
+	.screenshots img {
+		width: 250px;
+    height: 300px;
+	}
+
+	.over {
+		width: 228px;
+    height: 276px;
+    margin-left: 51px;
+	}
+
+	.more {
+		left: 114px;
+		padding: 0px 12px;
+		margin: -20px 1px 0 -114px;
+	}
+
+	.screenshots h1 {
+		font-size: 8vw;
+	}
+
+	.more-tall {
+		width: 227px;
+		height: 276px;
+		left: 39%;
+		padding: 0;
+	}
+
+	.more-tall p, .more p {
+		font-size: 13px;
+	}
+}
+
+@media (max-width: 768px) {
+	.certifs-logo {
+		 padding: 0;
+	}
+
+	.press-img {
+		margin-top: 15px;
+	}
+}
+
 @media (min-width: 768px) {
 
   .header {
@@ -719,22 +794,8 @@ button.btn-language:hover {
   }
 
 
-@media (max-width: 480px) {
-  .container {
-    text-align: center;
-  }
-
-  .header h1 {
-    font-size: 4em;
-  }
-
-
-  .certifications #press p {
-    text-align: center;
-  }
 }
 
-}
 @media (min-width: 992px) {
 
   .header h1 {
